Spraveno zobrazovani poslednich peti pridanych postav. Kosmeticke upravy (velikosti nadpisu, odsazeni, velikost obrazku). Nove informace o zazemi a svete. Pridany vedlejsi menu.

--- a/src/main/java/org/pilirion/nakaza/components/page/character/CharacterList.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/character/CharacterList.html
@@ -7,9 +7,19 @@
             <h1>Registrované postavy</h1>
 
             <p>
-                V případě, že si chcete vytvořit postavu pro tuto hru, je potřeba se nejprve <a wicket:id="login">přihlásit</a>.
-                V případě, že již přihlášeni jste stačí kliknout v okénku vpravo nahoře na moje postava nebo na
-                tlačítko vytvořit v levém spodním menu.
+                Pro vytvoření postavy je nutné se nejdřív zaregistrovat a pak se <a wicket:id="login">přihlásit</a>.
+                V případě, že již přihlášeni jste, stačí kliknout v okénku vpravo nahoře na <i>Moje postava</i> nebo na
+                tlačítko <i>Nová</i> v levém spodním menu.
+            </p>
+            <p>
+                Tvorba postavy zahrnuje uvedení jejího jména, věku, výběru skupiny, do které patří a krátkého popisu toho,
+                kdo vaše postava je a jakou má povahu, resp. minulost. Ve chvíli, kdy máte postavu hotovou, se můžete
+                začít zapojovat do jednotlivých příběhů.
+            </p>
+            <p>Příběh je v zásadě dějová linie, ve které vaše postava může hrát nějakou roli. Linky, kterých se zúčastníte,
+            budou mít velký vliv na to, co budete během hry dělat, a v mnoha případech nastiňují motivaci a cíle vaší postavy.
+                Účast v různých příbězích má různou cenu, tato cena je vyjádřena tzv. příběhovými body, které každá postava
+                dostane při svém vytvoření přiděleny.
             </p>
 
             <div wicket:id="charactersPanel"></div>
