--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
@@ -17,40 +17,58 @@
                 netradiční.
             </p>
 
+            <h4>Důležité organizační informace</h4>
             <p>
-                Předpokládaný počet účastníků: cca 60
+            <table>
+                <tr>
+                    <td><b>Počet účastníků:</b></td>
+                    <td>cca 60</td>
+                </tr>
+                <tr>
+                    <td><b>Termín:</b></td>
+                    <td>16.- 18. května 2014</td>
+                </tr>
+                <tr>
+                    <td><b>Místo:</b></td>
+                    <td>vojenský areál RZ Bratronice, okres Kladno</td>
+                </tr>
+                <tr>
+                    <td><b>Registrační poplatek:</b></td>
+                    <td>450 Kč předem, 650 Kč na místě</td>
+                </tr>
+                <tr>
+                    <td><b>Informace k platbě:</b></td>
+                    <td>účet <b>2800141302/2010</b><br/> variabilní symbol 201403<br/>do zprávy pro příjemce celé jméno</td>
+                </tr>
+            </table>
             </p>
-
             <p>
-                Hra se bude odehrávat o víkendu 16 – 18. května 2014 ve vojenském areálu Bratronice, okres Kladno.
-                Hráčský poplatek bude při platbě předem na účet 450Kč, v případě platby na místě bude ve výši 650Kč.
-                Je možné objednat si k zapůjčení námi připravenou nerf zbraň Nerf N-strike Elite - Strongarm za 200Kč
+                V ceně standardního poplatku je: účast na akci, <b>jídlo</b> po dobu samotného larpu tj. celá sobota, voda,
+                odznáček účastníka. </p>
+            <p>Navíc si lze objednat si zapůjčení námi připravené zbraně Nerf N-strike Elite - Strongarm za 200Kč
                 V ceně zápůjčky je 12 střel, v případě zájmu o větší množství střel je možné se domluvit.
             </p>
-
             <p>
-                V ceně standardního poplatku je: účast na akci, jídlo po dobu samotného larpu tj. celá sobota, voda,
-                odznáček účastníka.
+                Poplatek zaplaťte prosím předem do konce dubna na výše uvedený účet a do zprávy pro příjemce napište
+                své celé jméno. Účet je transparentní, můžete se podívat zda peníze přišly na adrese: <a
+                    href="https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302">
+                https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302</a>
             </p>
-
             <p>
-                Poplatek zaplaťte prosím předem do konce dubna na účet 2800141302/2010, variabilní symbol 201403,
-                do zprávy pro příjemce napište své celé jméno. Účet je transparentní, můžete se podívat zda
-                peníze přišli na adrese: <a href="https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302">
-                https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302
-                </a>
+                <b>Zázemí:</b> V areálu je k dispozici pitná kohoutková voda a elektřina, fungovat budou také toalety a
+                s největší pravděpodobností také jedna sprcha (voda ale bude studená). Spát se bude uvnitř v dvoupatrové
+                budově ve vyhrazených místnostech. V této budově se bude přes den hrát, tudíž bude ráno potřeba přesunout
+                věci do vymezené (jedné) místnosti, která bude považována za neherní území.
             </p>
+            <p>V případě dalších dotazů se na nás můžete obrátit na adrese: <a href="mailto:nakaza@pilirionos.org">nakaza@pilirionos.org</a></p>
 
-            <p>V případě dalších dotazů se na nás můžete obrátit na adrese: nakaza@pilirionos.org</p>
-
-            <h2>Místo</h2>
-
+            <h2><a name="location">Místo</a></h2>
+            <p>Nejbližší autobusovou zastávkou je Bratronice, obecní úřad.</p>
             <iframe src="http://api4.mapy.cz/frame?url=http%3A%2F%2Fwww.mapy.cz%2Fs%2F9gh3&amp;z=14&amp;x=14.012789344251884&amp;y=50.05850178964737&amp;o=0&amp;layer=15&amp;dx=14.012254184964744&amp;dy=50.058731085708196&amp;dt=Bratronice%2C%20okres%20Kladno&amp;move=1&amp;prev=1&amp;w=700&amp;h=466"
                     width="700" height="466" style="border:none" frameBorder="0"></iframe>
 
-            <p>Nejbližší autobusovou zastávkou je Bratronice, obecní úřad.</p>
 
-            <h1><a name="generalRules"></a>Obecná pravidla:</h1>
+            <h1><a name="generalRules"></a>Obecná pravidla</h1>
 
             <p>
                 Zde jsou uvedena obecná pravidla určená společně pro všechny skupiny hráčů. Specifika jednotlivých
@@ -58,7 +76,7 @@
                 pravidlech. V tomto textu najdete tu pravidla pro zbraně, boj, léčení, tvorbu postavy, atd.
             </p>
 
-            <h2>Tvorba postavy:</h2>
+            <h2>Tvorba postavy</h2>
 
             <p>
                 Každý hráč se musí povinně zaregistrovat, než mu bude umožněno vytvořit si vlastní postavu.
@@ -66,7 +84,7 @@
                 se již můžete vesele zapojit do nějakého příběhu či vytvořit nový v sekci „Příběhy“.
             </p>
 
-            <h2>Boj:</h2>
+            <h2>Boj</h2>
 
             <p>
                 Ve hře bude probíhat boj podle pravidel tzv. „šatrhu“, kdy každý hraje své zranění. Hráč se dělí na
@@ -77,7 +95,7 @@
                 Není-li ošetřen medikem, za 20 minut umírá.
             </p>
 
-            <h3>Speciální schopnost:</h3>
+            <h3>Speciální schopnosti</h3>
 
             <p>
                 <b>Ochromení:</b> Jedná se o speciální efekt, doprovázející případný útok některých nebezpečnějších
@@ -86,7 +104,7 @@
                 zasažený musí zahrát negativní efekt.
             </p>
 
-            <h2>Zbraně:</h2>
+            <h2>Zbraně</h2>
 
             <p>
                 K boji budou při larpu použity bezpečné měkčené zbraně spíše kratších rozměrů a střelné šipkové zbraně
@@ -100,7 +118,7 @@
                 žádných okolností.
             </p>
 
-            <h2>Léčení a oživování:</h2>
+            <h2>Léčení a oživování</h2>
 
             <p>
                 Pravděpodobnost zranění vaší postavy je poměrně vysoká, proto se vyplatí věnovat pozornost pravidlům pro
@@ -111,18 +129,18 @@
             </p>
 
             <p>
-                <b>Agónie:</b> : Po upadnutí do agónie nemůže hráč dělat nic jiného než jen volat o pomoc a ležící na
+                <b>Agónie</b> : Po upadnutí do agónie nemůže hráč dělat nic jiného než jen volat o pomoc a ležící na
                 zemi se trochu i bránit za pomoci střelné zbraně, nebo krátké zbraně na boj na blízko. Pro doražení
                 postavy v agónii jí stačí způsobit ještě jednou tři zásahy do těla či jeden do hlavy.
             </p>
 
             <p>
-                <b>Oživení:</b> V případě, že nějaký hráč zemře, zůstane ležet dalších 10 minut na místě. Po uplynutí
+                <b>Oživení</b> V případě, že nějaký hráč zemře, zůstane ležet dalších 10 minut na místě. Po uplynutí
                 vstane jako zombie dle pravidel uvedených u nákazy, a to i v případě, kdy bylo jeho tělo zcela zničeno
                 (např. sežráno nebo spáleno).
             </p>
 
-            <h2>Předměty ve hře:</h2>
+            <h2>Předměty ve hře</h2>
 
             <p>
                 Ve hře se budou nacházet různé předměty pro herní použití. Většinu herních předmětů bude možné normálně
@@ -146,7 +164,7 @@
                 Při hře budou použity dýmovnice, které bude možné získat pouze při hře (budou zajištěny organizátory).
             </p>
 
-            <h2>Nákaza:</h2>
+            <h2>Nákaza</h2>
 
             <p>
                 Vir, který mění lidi v tzv. zombie, se šíří vzduchem i kousnutím od infikovaného jedince. Vir je natolik
@@ -165,7 +183,7 @@
             </p>
 
             <p>
-                <b>Zombie:</b> Zombie jsou působením viru velice odolné na veškerá zranění (vydrží místo 3 celkem 6
+                <b>Zombie</b> Zombie jsou působením viru velice odolné na veškerá zranění (vydrží místo 3 celkem 6
                 zásahů do těla a končetin), ale jsou hnány jen potřebou jíst maso. Každých deset minut se jim regeneruje
                 jedno utržené zranění a na delší dobu je dokáže zpomalit pouze kulka do mozku či přerušení míchy v
                 blízkosti mozku za pomocí nějaké zbraně na blízko (ideálně useknutí hlavy) – po takto vážném zranění
