--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
@@ -4,7 +4,7 @@
 
         </div>
         <div class="middle-cotent">
-            <h1>O světě</h1>
+            <h1><a name="aboutWorld">O světě</a></h1>
 
             <p>Ještě nedávno si všichni mysleli, že budoucnost lidstva nemůže být růžovější – závislost na fosilních
                 palivech prakticky zmizela, lidský život se prodlužoval a prakticky všechny nemoci ustupovaly před
@@ -33,7 +33,28 @@
                 najít si bezpečný úkryt...
             </p>
 
-            <h2>Herní místo</h2>
+            <h3>Odagra</h3>
+
+            <p>Společnost Odagra je světovou jedničkou ve farmaceutickém průmyslu a provádí průlomový výzkum. Mamutí
+                nadnárodní koncern se angažuje také v mnoha dalších oblastech - ve zbrojním průmyslu, v potravinářství,
+                ve vývoji nových materiálů ... Kolem společnosti a její pracovní etiky vždy panovaly určité pochybnosti,
+                mnohokrát byla obviněna z využívání dětské práce, nuceného testování na lidech a nepovolených
+                genetických
+                experimentů, ale nikdy se nenašlo dost důkazů proto, aby byla potrestána. Koneckonců, která velká
+                společnost nemá své nepřátele, kteří se ji snaží očernit.
+            </p>
+
+            <h3>Svobodná budoucnost</h3>
+
+            <p>Svobodná budoucnost představuje jednu z nejvlivnějších domácích aktivistických organizací, která se vůči
+                Odagře ostře vymezuje a obviňuje ji z nekalých praktik. Vystupuje proti genetickým manipulacím s lidskou
+                i
+                zvířecí DNA, proti testování na zvířatech a proti zapojování umělých stimulantů do vojenských operací.
+                Její příslušníci jsou známi partyzánskými praktikami, kdy se infiltrují mezi zaměstnance laboratoře nebo
+                vniknou na uzavřená pracoviště a buď sabotují výzkum, nebo ho naopak dokumentují.
+            </p>
+
+            <h2><a name="location">Herní místo</a></h2>
 
             <p>
                 Karanténní oblast označená jako PXE01 je zároveň považována za prvotní místo expanze nákazy mezi běžnou
@@ -64,76 +85,91 @@
 
             <a href="http://www.mapy.cz/s/9oeY">Význačné body v území.</a>
 
-            <h2>Veřejný popis skupin</h2>
+            <h2><a name="groups">Skupiny ve hře</a></h2>
 
-            <h3>Přeživší</h3>
+            <div class="groupDiv">
+                <h3>Přeživší</h3>
+                <img class="float-left" wicket:id="survivor"/>
 
-            <img class="float-left" wicket:id="survivor"/>
+                <p>Po začátku šíření nákazy rozhodla korporace Odagra o zřízení karanténních oblastí. Nenakaženým
+                    obyvatelům
+                    bylo nakázáno, aby si vytvořili zásoby a neopouštěli bezpečí svých domovů. Většina předpokládala, že
+                    se
+                    jedná o krátkodobé opatření jen do okamžiku, kdy vytvoří dostatek léků pro všechny ohrožené. Nicméně
+                    pomoc nepřicházela a nakažených stále přibývá.
+                </p>
 
-            <p>Po začátku šíření nákazy rozhodla korporace Odagra o zřízení karanténních oblastí. Nenakaženým obyvatelům
-                bylo nakázáno, aby si vytvořili zásoby a neopouštěli bezpečí svých domovů. Většina předpokládala, že se
-                jedná o krátkodobé opatření jen do okamžiku, kdy vytvoří dostatek léků pro všechny ohrožené. Nicméně
-                pomoc nepřicházela a nakažených stále přibývá.
-            </p>
+                <p>
+                    <b>Popis skupiny:</b> Ve skupině jsou nejčastěji malé skupinky či dokonce jednotlivci, jimž se prozatím
+                    daří
+                    úspěšně skrývat před vojáky a vyhýbat se nakaženým. Bohužel zásob stále ubývá a všichni postupně
+                    museli
+                    opustit bezpečí svých úkrytů. V této skupině narazíte jak na obyčejné, tak i na velice vzdělané lidi
+                    nejrůznějšího typu. Jejich zbraně nejčastěji tvoří různé improvizované zbraně, nářadí, nože a
+                    výjimečně
+                    i pistole.
+                </p>
+            </div>
+            <div class="groupZombieDiv">
+                <h3>Zombie</h3>
 
-            <p>
-                Popis skupiny: Ve skupině jsou nejčastěji malé skupinky či dokonce jednotlivci, jimž se prozatím daří
-                úspěšně skrývat před vojáky a vyhýbat se nakaženým. Bohužel zásob stále ubývá a všichni postupně museli
-                opustit bezpečí svých úkrytů. V této skupině narazíte jak na obyčejné, tak i na velice vzdělané lidi
-                nejrůznějšího typu. Jejich zbraně nejčastěji tvoří různé improvizované zbraně, nářadí, nože a výjimečně
-                i pistole.
-            </p>
+                <img class="float-right groupPic" wicket:id="zombie"/>
 
-            <h3>Zombie</h3>
+                <p>
+                    Následuje vyjádření doktora Entona pro rozpoznání průběhu nákazy u postižených osob.
+                    <q>Několik posledních měsíců jsem trávil pozorováním postupu nákazy u 15 pokousaných. U všech se
+                        projevují obdobné symptomy. Na počátku se objeví zvýšená teplota a malátnost. Několik hodin poté
+                        začne postiženému blednout kůže a získávat nazelenalý nádech. Následuje veliké utrpení pro
+                        pacienta,
+                        který se začne svíjet v křečí a zvracet krev. V tomto okamžiku je již lepší veškeré utrpení
+                        pacienta
+                        ukončit. Pokud se tak nestane, pacient po cca 2 až 3 hodinách upadá do komatu, ze kterého se po
+                        nějaké době probouzí v akutním záchvatu agresivní psychózy se sklony ke kanibalismu.</q>
+                </p>
 
-            <img class="float-right" wicket:id="zombie"/>
+                <p>
+                    Dr. Enton bohužel přehlédl jednu velice zajímavou vlastnost u nakažených osob, které jsou přeživšími
+                    nazývány prostě „zombie“, popř. „nemrtví a často také „ti hnusní šmejdi“. Lidské tělo po několika
+                    měsících dokáže nákazu do jisté míry potlačit a obnovit některé mozkové funkce. Nejvíce to lze
+                    připodobnit k chování smečky zvířat, v níž panuje určitá hierarchie a jistá základní spoluprace ve
+                    snaze
+                    přežít (metaforicky řečeno).
+                </p>
 
-            <p>
-                Následuje vyjádření doktora Entona pro rozpoznání průběhu nákazy u postižených osob.
-                <q>„Několik posledních měsíců jsem trávil pozorováním postupu nákazy u 15 pokousaných. U všech se
-                    projevují obdobné symptomy. Na počátku se objeví zvýšená teplota a malátnost. Několik hodin poté
-                    začne postiženému blednout kůže a získávat nazelenalý nádech. Následuje veliké utrpení pro pacienta,
-                    který se začne svíjet v křečí a zvracet krev. V tomto okamžiku je již lepší veškeré utrpení pacienta
-                    ukončit. Pokud se tak nestane, pacient po cca 2 až 3 hodinách upadá do komatu, ze kterého se po
-                    nějaké době probouzí v akutním záchvatu agresivní psychózy se sklony ke kanibalismu.“</q>
-            </p>
+                <p>
+                    <b>Popis skupiny:</b> Nakažení nebo též tzv. „zombie“ se vyznačují světlejší barvou kůže s lehce
+                    nazelenalým
+                    nádechem. Po delší době působení nákazy dokáží opět trochu přemýšlet a i spolupracovat při honu za
+                    kořistí. Nejčastěji na zabití své kořisti používají ostré drápy, nebo zuby a výjimečně i jednoduché
+                    pazourkové zbraně či vše nebezpečné co naleznou při svém zkoumání. Nakažení zatím naštěstí stále
+                    neumí
+                    ovládat střelné zbraně.
+                </p>
+            </div>
+            <br/>
+            <div class="groupDiv">
+                <h3>Armáda</h3>
+                <img class="float-left groupPic" wicket:id="army"/>
 
-            <p>
-                Dr. Enton bohužel přehlédl jednu velice zajímavou vlastnost u nakažených osob, které jsou přeživšími
-                nazývány prostě „zombie“, popř. „nemrtví a často také „ti hnusní šmejdi“. Lidské tělo po několika
-                měsících dokáže nákazu do jisté míry potlačit a obnovit některé mozkové funkce. Nejvíce to lze
-                připodobnit k chování smečky zvířat, v níž panuje určitá hierarchie a jistá základní spoluprace ve snaze
-                přežít (metaforicky řečeno).
-            </p>
-
-            <p>
-                Popis skupiny: Nakažení nebo též tzv. „zombie“ se vyznačují světlejší barvou kůže s lehce nazelenalým
-                nádechem. Po delší době působení nákazy dokáží opět trochu přemýšlet a i spolupracovat při honu za
-                kořistí. Nejčastěji na zabití své kořisti používají ostré drápy, nebo zuby a výjimečně i jednoduché
-                pazourkové zbraně či vše nebezpečné co naleznou při svém zkoumání. Nakažení zatím naštěstí stále neumí
-                ovládat střelné zbraně.
-            </p>
-
-            <img class="float-left" wicket:id="army"/>
-
-            <h3>Armáda</h3>
-
-
-            <p>
-                Unik testovaných subjektů představoval pro korporaci Odagra obrovský problém, který se rozhodla vyřešit
-                co nejrychleji s použitím smrtící síly. Kvůli tomuto účelu vyslala většinu své korporátní armády do
-                karanténních oblastí pro zajištění bezpečnosti přeživších. Soukromou armádu tvoří téměř výhradně bývalí
-                vojáci a výjimečně i bývalí policisté, kteří jsou ochotní pro pěknou finanční sumu uklidit jakoukoli
-                špínu. Jsou to tvrdí a zkušení muži i ženy, jejichž hlavní zábavou je zabíjení a zbraně.
-            </p>
-
-            <p>
-                Popis skupiny: Armáda je nejmenší skupinou ve hře, jejíž hlavní výhodou proti všem ostatním je celkem
-                relativně dostatečné množství munice, a střelných zbraní a vybavení. Nejčastěji musí hlídkovat ve
-                vyhrazené karanténní oblasti a likvidovat každého nakaženého, kterého potkají, ale občas musí provádět i
-                jiné méně zajímavé úkony, jako bezpečné dopravení zásob munice či výslechy zatčených. Jejich zbraně
-                nejčastěji tvoří výhradně střelné zbraně občas doplněné o nějaký nůž či mačetu.
-            </p>
+                <p>
+                    Unik testovaných subjektů představoval pro korporaci Odagra obrovský problém, který se rozhodla
+                    vyřešit
+                    co nejrychleji s použitím smrtící síly. Kvůli tomuto účelu vyslala většinu své korporátní armády do
+                    karanténních oblastí pro zajištění bezpečnosti přeživších. Soukromou armádu tvoří téměř výhradně
+                    bývalí
+                    vojáci a výjimečně i bývalí policisté, kteří jsou ochotní pro pěknou finanční sumu uklidit jakoukoli
+                    špínu. Jsou to tvrdí a zkušení muži i ženy, jejichž hlavní zábavou je zabíjení a zbraně.
+                </p>
+                <p>
+                    <b>Popis skupiny:</b> Armáda je nejmenší skupinou ve hře, jejíž hlavní výhodou proti všem ostatním je
+                    celkem
+                    relativně dostatečné množství munice, a střelných zbraní a vybavení. Nejčastěji musí hlídkovat ve
+                    vyhrazené karanténní oblasti a likvidovat každého nakaženého, kterého potkají, ale občas musí
+                    provádět i
+                    jiné méně zajímavé úkony, jako bezpečné dopravení zásob munice či výslechy zatčených. Jejich zbraně
+                    nejčastěji tvoří výhradně střelné zbraně občas doplněné o nějaký nůž či mačetu.
+                </p>
+            </div>
 
         </div>
     </div>
