--- a/src/main/java/org/pilirion/nakaza/components/page/story/AddStory.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/AddStory.html
@@ -9,7 +9,7 @@
             <div class="error" wicket:id="feedback"></div>
 
             <div class="info">
-                Zbývá <span class="availablePoints" wicket:id="pointsRemaining">20</span> bodů schopnosti.
+                Zbývá <span class="availablePoints" wicket:id="pointsRemaining">20</span> příběhových bodů.
             </div>
 
             <form wicket:id="storiesForm">
