--- a/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/story/StoryList.html
@@ -10,13 +10,19 @@
                 Chcete-li vytvořit příběh, je nejprve potřeba se přihlásit například <wicket:link><a href="login">zde</a></wicket:link>.
             </p>
             <p>
-                Po přihlášení byste na této stránce měli v pravém spodním menu mít možnost Nový, tato možnost
+                Po přihlášení byste na této stránce měli v pravém spodním menu mít možnost <i>Nový</i>, tato možnost
                 vás vezme k tvorbě nového příběhu.
             </p>
             <p>
-                Další z možností v pravém spodním menu je Výběr, který vás vezme na stránku, na které si budete moci
-                vybrat do jakých příběhů se vaše postav zapojí.
+                Další z možností v pravém spodním menu je <i>Výběr</i>, který vás vezme na stránku, na které si budete moci
+                vybrat do jakých příběhů se vaše postava zapojí. Bez vytvořené postavy se do příběhů zapojovat nelze.
             </p>
+            <p>Příběh je v zásadě dějová linie, ve které vaše postava může hrát nějakou roli. Linky, kterých se zúčastníte,
+                budou mít velký vliv na to, co budete během hry dělat, a v mnoha případech nastiňují motivaci a cíle vaší postavy.
+                Účast v různých příbězích má různou cenu, tato cena je vyjádřena tzv. příběhovými body, které každá postava
+                dostane při svém vytvoření přiděleny.
+            </p>
+
 
             <div wicket:id="storiesPanel"></div>
         </div>
