--- a/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/character/CharacterDetailPanel.html
@@ -2,10 +2,10 @@
     <h1>O vaší postavě</h1>
 
     <div class="avatarImage">
-        <img wicket:id="avatarImage" class="avatar" alt="AvatarHracoviPostavy"/>
+        <img wicket:id="avatarImage" class="avatar" alt="AvatarHracovyPostavy"/>
     </div>
 
-    <h2 wicket:id="name">Jméno postavy</h2>
+    <h1 wicket:id="name">Jméno postavy</h1>
 
     <div class="age"><b>Věk:</b> <span wicket:id="age">28</span></div>
 
