Updated home page text.

--- a/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/HomePage.html
@@ -6,6 +6,14 @@
         <div class="middle-cotent">
             <h1>Nákaza</h1>
 
+            <h3>S lítostí oznamujeme, že nákaza se neuskuteční neboť nemáme dostatek hráčů. Těm, kteří již zaplatili
+                registrační poplatek, ho v brzké době vrátíme a všechny, kteří se přihlásili budeme v budoucnu kontaktovat
+                s nabídkou podobné menší akce. Pokud vám to nevyhovuje, napište nám prosím na mail nakaza@pilirionos.org,
+                stejně tak nám na tento mail napište, pokud byste chtěli dostat informace o této akci.<br />
+
+                Organizační tým Nákazy.
+            </h3>
+
             <img wicket:id="disease1" style="float:left;">
             <p>
                 Tichý noční vánek se proháněl vysokou trávou a lehce s ní pohupoval. Mladý muž ukrývající se v přízemní
